2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: Even for root, warn if an invalid shell is
	specified. Alioth#311305

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/limits.5.xml: Document the selection of the limits when
	multiple lines match the user.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/limits.c: Re-indent.
	* libmisc/limits.c: Reformat the documentation. Avoid personal
	comments.
	* man/limits.5.xml: Document the new features.

2010-03-18  Thomas Orgis  <thomas@orgis.org>

	* NEWS, libmisc/limits.c: Fix parsing of limits.
	* NEWS, libmisc/limits.c: Add support for infinite limits.
	* NEWS, libmisc/limits.c: Add support for @group syntax.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/tcbfuncs.h: Re-indent.
	* lib/tcbfuncs.h: Explicitly indicate functiontakinga void
	parameter.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: When exiting because of a failure, warn if an
	home directory created, but cannot be removed.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chowndir.c: Re-indent.
	* libmisc/chowndir.c: Avoid assignment in comparisons.
	* libmisc/chowndir.c: Added brackets and parenthesis.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/strtoday.c: Add support for numerical dates, assuming
	they are already specified in number of days since Epoch. Return
	-2 in case of errors to support the specification of -1.
	* src/usermod.c, src/useradd.c: Adapt to the new error value of
	strtoday().
	* src/chage.c:  Remove isnum(). Adapt to the new error value of
	strtoday(). Support for numerical dates is moved to strtoday().

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Harmonize name of parameters.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Indicate which tools support TCB.
